--- a/produtos.html
+++ b/produtos.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Produtos - Barbearia Alura</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
-	</head>
-	<body>
-		<header>
-			<div class="caixa">
-				<h1><img src="logo.png"></h1>
 
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contato.html">Contato</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
+<head>
+	<meta charset="UTF-8">
+	<title>Produtos - Barbearia Alura</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+</head>
 
-		<main>
-			<ul class="produtos">
-				<li>
-					<h2>Cabelo</h2>
-					<img src="cabelo.jpg">
-					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-					<p class="produto-preco">R$ 25,00</p>
-				</li>
-				<li>
-					<h2>Barba</h2>
-					<img src="barba.jpg">
-					<p class="produto-descricao">Corte e desenho profissional de barba</p>
-					<p class="produto-preco">R$ 18,00</p>
-				</li>
-				<li>
-					<h2>Cabelo + Barba</h2>
-					<img src="cabelo+barba.jpg">
-					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
-					<p class="produto-preco">R$ 35,00</p>
-				</li>
-			</ul>
-		</main>
+<body>
+	<header>
+		<div class="caixa">
+			<h1><img src="https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/logo.png?v=1662836145140"></h1>
 
-		<footer>
-			<img src="logo-branco.png">
-			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
-		</footer>
-	</body>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="produtos.html">Produtos</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<main>
+		<ul class="produtos">
+			<li>
+				<h2>Cabelo</h2>
+				<img src="https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/cabelo.jpg?v=1662836155259">
+				<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+				<p class="produto-preco">R$ 25,00</p>
+			</li>
+			<li>
+				<h2>Barba</h2>
+				<img src="https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/barba.jpg?v=1662836159168">
+				<p class="produto-descricao">Corte e desenho profissional de barba</p>
+				<p class="produto-preco">R$ 18,00</p>
+			</li>
+			<li>
+				<h2>Cabelo + Barba</h2>
+				<img
+					src="https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/cabelo%2Bbarba.jpg?v=1662836152641">
+				<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+				<p class="produto-preco">R$ 35,00</p>
+			</li>
+		</ul>
+	</main>
+
+	<footer>
+		<img src="https://cdn.glitch.global/581743d6-43c6-417e-9d7b-0e3c7ce32041/logo-branco.png?v=1662836170201">
+		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+	</footer>
+</body>
+
 </html>
